--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -117,16 +117,16 @@
             <h1>Find Us on Social Media</h1>
             <ul>
                 <li>
-                    <a href="#"><img src="#" alt="facebook Icon"></a>
+                    <a href="#"><img src="images/facebook.png" alt="facebook Icon"></a>
                 </li>
                 <li>
-                    <a href="#"><img src="#" alt="twitter Icon"></a>
+                    <a href="#"><img src="images/twitter.png" alt="twitter Icon"></a>
                 </li>
                 <li>
-                    <a href="#"><img src="#" alt="linkedIn Icon"></a>
+                    <a href="#"><img src="images/linkedin.png" alt="linkedIn Icon"></a>
                 </li>
                 <li>
-                    <a href="#"><img src="#" alt="instagram Icon"></a>
+                    <a href="#"><img src="images/instagram.png" alt="instagram Icon"></a>
                 </li>
             </ul>
         </div>
