--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -95,25 +95,31 @@
             <img class="logo-img" id="header-img" src="images/temple_icon.jpg" alt="logo">
             <h1>Temple Inn<br> & <br>Suites</h1>
         </div>
-        <div>
+        <div id="contact">
             <h1>Contact Us</h1>
             <ul>
-                <li><img src="images/phone.png" alt="phone">
-                    <p>Phone: </p>
+                <li><img src="images/phone.png" alt="phone" class="contact">
+                    <p><strong><u>Phone:</u></strong> (1) 503-639-7066</p>
                 </li>
-                <img src="images/email.png" alt="email">
-                <p>Phone: </p>
-                <img src="images/address.png" alt="address">
-                <p>Phone: </p>
-                <img src="images/fax.png" alt="fax">
-                <p>Phone: </p>
+                <li><img src="images/email.png" alt="email" class="contact">
+                    <p><strong><u>Email:</u></strong> templeinn&suites@gmail.com</p>
+                </li>
+                <li>
+                    <img src="images/address.png" alt="address" class="contact">
+                    <p><strong><u>Address:</u></strong> 4800 Montgomery Ln #300, Bethesda, MD 20814</p>
+                </li>
+                <li>
+                    <img src="images/fax.png" alt="fax" class="contact">
+                    <p><strong><u>Fax:</u></strong> +44 161 999 8888</p>
+                </li>
             </ul>
         </div>
         <div>
             <h1> Google Map</h1>
-            <img src="#" alt="google map image">
+            <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3101.404839892385!2d-77.10001647008573!3d38.98325588410972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7c98c0bda2181%3A0xe8ffe07c69d0aabe!2sTemple%20Inn%20%26%20Suites!5e0!3m2!1sen!2sus!4v1657858565393!5m2!1sen!2sus"
+                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
         </div>
-        <div>
+        <div id="icons">
             <h1>Find Us on Social Media</h1>
             <ul>
                 <li>
@@ -126,7 +132,7 @@
                     <a href="#"><img src="images/linkedin.png" alt="linkedIn Icon"></a>
                 </li>
                 <li>
-                    <a href="#"><img src="images/instagram.png" alt="instagram Icon"></a>
+                    <a href="https://www.instagram.com/"><img src="images/instagram.png" alt="instagram Icon" target="_blank" rel="noreferrer noopener"></a>
                 </li>
             </ul>
         </div>
