--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -123,16 +123,16 @@
             <h1>Find Us on Social Media</h1>
             <ul>
                 <li>
-                    <a href="#"><img src="images/facebook.png" alt="facebook Icon"></a>
+                    <a href="#" target="_blank" rel="noreferrer noopener"><img src="images/facebook.png" alt="facebook icon"></a>
                 </li>
                 <li>
-                    <a href="#"><img src="images/twitter.png" alt="twitter Icon"></a>
+                    <a href="#" target="_blank" rel="noreferrer noopener"><img src="images/twitter.png" alt="twitter icon"></a>
                 </li>
                 <li>
-                    <a href="#"><img src="images/linkedin.png" alt="linkedIn Icon"></a>
+                    <a href="#" target="_blank" rel="noreferrer noopener"><img src="images/linkedin.png" alt="linkedIn icon"></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/"><img src="images/instagram.png" alt="instagram Icon" target="_blank" rel="noreferrer noopener"></a>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noreferrer noopener"><img src="images/instagram.png" alt="instagram icon"></a>
                 </li>
             </ul>
         </div>
@@ -140,12 +140,11 @@
             <p class="js" id="js-p">
                 &copy;2022 | Temple Inn & Suites | CEO: Nikkolet Ashby | WDD 230 Final Project | Last Updated: <span id="lastmodified"></span></p>
         </div>
-
     </footer>
     <script src="js/script.js"></script>
-    <script src="js/windchill.js"></script>
+    <!-- <script src="js/windchill.js"></script>
     <script src="js/spotlight.js"></script>
-    <script src="js/weatherapimain.js"></script>
+    <script src="js/weatherapimain.js"></script> -->
 </body>
 
 </html>
