--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -62,13 +62,19 @@
             <h1>Weather Alert!</h1>
         </div>
         <div class="grid">
-            <div>
+            <div id="temples">
                 <h1>Nearby Temples Carousel with arrows</h1>
+                <div class="images">
+                    <img src="images/1599px-Provo_Utah_Temple_4.jpg" alt="Provo Temple">
+                    <img src="images/ogden-utah-temple-13966-main.jpg" alt="Ogden Temple">
+                    <img src="images/oquirrh-mountain-utah-temple-10509-main.jpg" alt="Oquirrh Mountain Temple">
+                    <img src="images/salt-lake-temple-15669-main.jpg" alt="Salt Lake Temple">
+                </div>
             </div>
             <div id="reservation">
                 <h1>Make a Reservation with button</h1>
                 <img src="images/temple-hotel.jpg" alt="Reservation Image"><br>
-                <a href="#"><button class="button">Make a Reservation!</button></a>
+                <a href="#"><button id="reservebtn">Make a Reservation!</button></a>
             </div>
             <div>
                 <h1>Activities Carousel with arrows</h1>
