--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -63,8 +63,68 @@
             <h1>Weather Alert!</h1>
         </div>
         <div class="grid">
-            <div id="temples" id="myCarousel" class="carousel slide" data-ride="carousel">
-                <h1>Nearby Temples</h1>
+            <div id="temples">
+                <div id="myTempleCarousel" class="carousel slide" data-ride="carousel">
+                    <h1>Nearby Temples</h1>
+                    <div class="images">
+                        <ol class="carousel-indicators">
+                            <li data-target="#myTempleCarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#myTempleCarousel" data-slide-to="1"></li>
+                            <li data-target="#myTempleCarousel" data-slide-to="2"></li>
+                            <li data-target="#myTempleCarousel" data-slide-to="3"></li>
+                        </ol>
+
+                        <div class="carousel-inner">
+                            <div class="item active">
+                                <img src="images/1599px-Provo_Utah_Temple_4.jpg" alt="Provo Temple">
+                                <div class="carousel-caption">
+                                    <h3>Provo Temple</h3>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <img src="images/ogden-utah-temple-13966-main.jpg" alt="Ogden Temple">
+                                <div class="carousel-caption">
+                                    <h3>Ogden Temple</h3>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <img src="images/oquirrh-mountain-utah-temple-10509-main.jpg" alt="Oquirrh Mountain Temple">
+                                <div class="carousel-caption">
+                                    <h3>Oquirrh Mountain Temple</h3>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <img src="images/salt-lake-temple-15669-main.jpg" alt="Salt Lake Temple">
+                                <div class="carousel-caption">
+                                    <h3>Salt Lake Temple</h3>
+                                </div>
+                            </div>
+                        </div>
+
+                        <a class="left carousel-control" href="#myTempleCarousel" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#myTempleCarousel" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <div id="reservation">
+            <div>
+                <img src="images/temple-hotel.jpg" alt="Reservation Image"><br>
+                <a href="#"><button id="reservebtn">Make a Reservation!</button></a>
+            </div>
+
+        </div>
+
+        <div id="activities">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <h1>Activities</h1>
                 <div class="images">
                     <ol class="carousel-indicators">
                         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -74,53 +134,59 @@
                     </ol>
 
                     <div class="carousel-inner">
-
                         <div class="item active">
-                            <img src="images/1599px-Provo_Utah_Temple_4.jpg" alt="Provo Temple">
+                            <img src="images/amenities_family_history.jpg" alt="Family History Center">
+                            <div class="carousel-caption">
+                                <h3>Famiy History Center</h3>
+                            </div>
                         </div>
                         <div class="item">
-                            <img src="images/ogden-utah-temple-13966-main.jpg" alt="Ogden Temple">
+                            <img src="images/spa.jpg" alt="Spa">
+                            <div class="carousel-caption">
+                                <h3>Spa</h3>
+                            </div>
                         </div>
                         <div class="item">
-                            <img src="images/oquirrh-mountain-utah-temple-10509-main.jpg" alt="Oquirrh Mountain Temple">
+                            <img src="images/breakfast.jpg" alt="Full Breakfast">
+                            <div class="carousel-caption">
+                                <h3>All Inclusive Breakfast</h3>
+                            </div>
                         </div>
                         <div class="item">
-                            <img src="images/salt-lake-temple-15669-main.jpg" alt="Salt Lake Temple">
+                            <img src="images/pool.webp" alt="Pool">
+                            <div class="carousel-caption">
+                                <h3>Pool</h3>
+                            </div>
+
                         </div>
+                        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                     </div>
                 </div>
-
-                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right"></span>
-                    <span class="sr-only">Next</span>
-                </a>
             </div>
         </div>
-        <div id="reservation">
-            <h1>Make a Reservation with button</h1>
-            <img src="images/temple-hotel.jpg" alt="Reservation Image"><br>
-            <a href="#"><button id="reservebtn">Make a Reservation!</button></a>
-        </div>
-        <div>
-            <h1>Activities Carousel with arrows</h1>
-        </div>
-        <div>
-            <h1>Weather</h1>
+        <div id="weather-grid">
             <div>
-                <p>The current temperature in West Valley City, Utah is <span id="current-temp"></span> &deg;F</p>
-                <p>The current Humidity in West Valley City, Utah is <span id="humidity"></span></p>
-                <p>The current Windspeed in West Valley City, Utah is <span id="windspeed"></span></p>
-                <p>The current windchill in West Valley City, Utah is <span id="windchill"></span></p>
-                <h2>Current Weather Condition</h2>
-                <figure>
-                    <img src="" alt="" id="weather-icon" />
-                    <figcaption></figcaption>
-                </figure>
+                <h1>Weather</h1>
+                <div>
+                    <p>The current temperature in West Valley City, Utah is <span id="current-temp"></span> &deg;F</p>
+                    <p>The current Humidity in West Valley City, Utah is <span id="humidity"></span></p>
+                    <p>The current Windspeed in West Valley City, Utah is <span id="windspeed"></span></p>
+                    <p>The current windchill in West Valley City, Utah is <span id="windchill"></span></p>
+                    <h2>Current Weather Condition</h2>
+                    <figure>
+                        <img src="" alt="" id="weather-icon" />
+                        <figcaption></figcaption>
+                    </figure>
+                </div>
             </div>
+
         </div>
         </div>
     </main>
