--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -123,14 +123,16 @@
         </div>
 
         <div id="activities">
-            <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                <h1>Activities</h1>
+            <div id="myActivitiesCarousel" class="carousel slide" data-ride="carousel">
+                <h1>Perks</h1>
                 <div class="images">
                     <ol class="carousel-indicators">
-                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#myCarousel" data-slide-to="1"></li>
-                        <li data-target="#myCarousel" data-slide-to="2"></li>
-                        <li data-target="#myCarousel" data-slide-to="3"></li>
+                        <li data-target="#myActivitiesCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#myActivitiesCarousel" data-slide-to="1"></li>
+                        <li data-target="#myActivitiesCarousel" data-slide-to="2"></li>
+                        <li data-target="#myActivitiesCarousel" data-slide-to="3"></li>
+                        <li data-target="#myActivitiesCarousel" data-slide-to="4"></li>
+                        <li data-target="#myActivitiesCarousel" data-slide-to="5"></li>
                     </ol>
 
                     <div class="carousel-inner">
@@ -141,7 +143,7 @@
                             </div>
                         </div>
                         <div class="item">
-                            <img src="images/spa.jpg" alt="Spa">
+                            <img src="images/spa1.webp" alt="Spa">
                             <div class="carousel-caption">
                                 <h3>Spa</h3>
                             </div>
@@ -157,13 +159,24 @@
                             <div class="carousel-caption">
                                 <h3>Pool</h3>
                             </div>
-
                         </div>
-                        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                        <div class="item">
+                            <img src="images/gym.jpg" alt="Gym">
+                            <div class="carousel-caption">
+                                <h3>Gym</h3>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="images/Hotel-Parking.jpg" alt="Free Parking">
+                            <div class="carousel-caption">
+                                <h3>Free Parking</h3>
+                            </div>
+                        </div>
+                        <a class="left carousel-control" href="#myActivitiesCarousel" data-slide="prev">
                             <span class="glyphicon glyphicon-chevron-left"></span>
                             <span class="sr-only">Previous</span>
                         </a>
-                        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                        <a class="right carousel-control" href="#myActivitiesCarousel" data-slide="next">
                             <span class="glyphicon glyphicon-chevron-right"></span>
                             <span class="sr-only">Next</span>
                         </a>
