--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -19,7 +19,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&family=Source+Sans+Pro&display=swap" rel="stylesheet">
-    <link rel="icon" href="images/2730327_colour_harry_hogwarts_house_potter_icon.png">
+    <link rel="icon" href="images/temple_icon.jpg">
 </head>
 
 
