--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -91,7 +91,7 @@
                         <p>The current windchill in West Valley City, Utah is: <br><span id="windchill"></span></p>
                         <h2>Current Weather Condition</h2>
                         <figure>
-                            <img src="" alt="" id="weather-icon" />
+                            <img src="" alt="" id="weatherIcon" />
                             <figcaption></figcaption>
                         </figure>
                     </div>
@@ -103,7 +103,7 @@
                         <p>The current windchill in West Valley City, Utah is: <br><span id="windchill"></span></p>
                         <h2>Current Weather Condition</h2>
                         <figure>
-                            <img src="" alt="" id="weather-icon" />
+                            <img src="" alt="" id="weatherIcon" />
                             <figcaption></figcaption>
                         </figure>
                     </div>
@@ -115,7 +115,7 @@
                         <p>The current windchill in West Valley City, Utah is: <br><span id="windchill"></span></p>
                         <h2>Current Weather Condition</h2>
                         <figure>
-                            <img src="" alt="" id="weather-icon" />
+                            <img src="" alt="" id="weatherIcon" />
                             <figcaption></figcaption>
                         </figure>
 
