--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -84,7 +84,7 @@
 
                     <h1>Weather</h1>
                     <div id="weather-box1">
-                        <h3>Today</h3>
+                        <h3 id="today"></h3>
                         <p>The current temperature in West Valley City, Utah is: <br><span id="current-temp"></span> &deg;F</p>
                         <p>The current Humidity in West Valley City, Utah is: <br><span id="humidity"></span></p>
                         <p>The current Windspeed in West Valley City, Utah is: <br><span id="windspeed"></span></p>
